--- a/CustomAmmoCategories/AIM_settings.json
+++ b/CustomAmmoCategories/AIM_settings.json
@@ -480,7 +480,7 @@
 
   /* Ignore (reroll) empty slots when rolling crit.  Default false. */
 
-  "CritIgnoreEmptySlots": false,
+  "CritIgnoreEmptySlots": true,
 
   /* Roll on next damage transfer location if a location has nothing to crit.  Default false. */
 
@@ -488,7 +488,7 @@
 
   /* Deduce rolled crit from crit% and keep rolling crit until crit% is zero.  Default true. */
 
-  "MultipleCrits": true,
+  "MultipleCrits": false,
 
   //
   // Hit Resolution
