--- a/RogueModuleTech/Primitive/weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER10.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER10.json
@@ -62,7 +62,7 @@
         "Purchasable": true,
         "Manufacturer": "Death Blossom",
         "Model": "Rocket Launcher",
-        "UIName": "Heavy RL10 AOE",
+        "UIName": "AOE Rocket 10",
         "Id": "Weapon_HEAVYAOE_ROCKETLAUNCHER10",
         "Name": "RL10",
         "Details": "This Rocket Launchers Warhead got replaced by a HE Payload spreading the damage over a wide Area on Impact.<b><color=#F79232>1 SHOT!</color> </b> <b><color=#099ff2>VOLATILE!</color></b>",
