--- a/RogueModuleTech/Primitive/weapons/Weapon_LRM_ROCKETLAUNCHER15.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_LRM_ROCKETLAUNCHER15.json
@@ -57,7 +57,7 @@
         "Purchasable": true,
         "Manufacturer": "Death Blossom",
         "Model": "Rocket Launcher",
-        "UIName": "RL15",
+        "UIName": "Rocket 15",
         "Id": "Weapon_LRM_ROCKETLAUNCHER15",
         "Name": "RL15",
         "Details": "Rocket Launchers are cheap, unguided, one-shot missile launchers. Developed by the Marian Hegemony, they often replace more sophisticated equipment that the Periphery nation cannot afford or is unable to repair.<b><color=#F79232>1 SHOT!</color> </b> <b><color=#099ff2>VOLATILE!</color></b>",
