--- a/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER15.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER15.json
@@ -12,24 +12,22 @@
                 "1shot",
                 "InternalAmmo: 4",
 				"AMSChance: -30%",
-                "IsRocket: 10"
+                "IsRocket: 15",
+				"InternalAmmoShots: 5"
             ]
         },
         "InventorySorter": {
-            "SortKey": "03002"
+            "SortKey": "03003"
         },
-		        "Flags": {
+		"Flags": {
             "flags": [
-                "not_broken",
-                "no_salvage",
-                "autorepair"
+                "not_broken"
             ]
-        },
-		"Lootable" :  { "ItemID" : "Weapon_LRM_ROCKETLAUNCHER10" }
+        }
     },
     "Category": "Missile",
     "Type": "LRM",
-    "WeaponSubType": "LRM10",
+    "WeaponSubType": "LRM15",
     "MinRange": 0,
     "MaxRange": 460,
     "RangeSplit": [
@@ -38,8 +36,8 @@
         400
     ],
     "AmmoCategory": "Rocket",
-    "StartingAmmoCapacity": 50,
-    "HeatGenerated": 5,
+    "StartingAmmoCapacity": 75,
+    "HeatGenerated": 7,
     "Damage": 6,
     "OverheatedDamageMultiplier": 0,
     "EvasiveDamageMultiplier": 0,
@@ -51,34 +49,34 @@
     "AOECapable": false,
     "IndirectFireCapable": false,
     "RefireModifier": 0,
-    "ShotsWhenFired": 10,
+    "ShotsWhenFired": 15,
     "ProjectilesPerShot": 1,
     "AttackRecoil": 1,
     "Instability": 1,
 	"Unguided": true,
 	"AMSHitChance": -0.3,
 	"FireTerrainChance": 0.0075,
-    "WeaponEffectID": "WeaponEffect-Weapon_LRM10",
+    "WeaponEffectID": "WeaponEffect-Weapon_LRM15",
     "Description": {
-        "Cost": 15000,
+        "Cost": 22000,
         "Rarity": 99,
         "Purchasable": true,
         "Manufacturer": "Death Blossom",
         "Model": "Rocket Launcher",
-        "UIName": "RL10",
-        "Id": "Weapon_TANK_ROCKETLAUNCHER10",
-        "Name": "RL10",
-        "Details": "Rocket Launchers are cheap, unguided, one-shot missile launchers. Developed by the Marian Hegemony, they often replace more sophisticated equipment that the Periphery nation cannot afford or is unable to repair.<b><color=#F79232>1 SHOT!</color> <b><color=#099ff2>VOLATILE!</color></b>",
+        "UIName": "Rocket Pack 15",
+        "Id": "Weapon_TANK_ROCKETLAUNCHER15",
+        "Name": "RL15",
+        "Details": "Rocket Launchers are cheap, unguided, one-shot missile launchers. The Pack's are bundles of several Rocket Launchers that can be fired in succession.<b><color=#F79232>5 SALVOS!</color> <b><color=#099ff2>VOLATILE!</color></b>",
         "Icon": "uixSvgIcon_weapon_Missile"
     },
     "BonusValueA": "",
     "BonusValueB": "",
     "ComponentType": "Weapon",
     "ComponentSubType": "Weapon",
-    "PrefabIdentifier": "lrm10",
+    "PrefabIdentifier": "lrm15",
     "BattleValue": 0,
     "InventorySize": 5,
-    "Tonnage": 2.5,
+    "Tonnage": 5,
     "AllowedLocations": "All",
     "DisallowedLocations": "All",
     "CriticalComponent": false,
