--- a/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER5.json
@@ -12,7 +12,8 @@
                 "1shot",
                 "InternalAmmo: 4",
 				"AMSChance: -30%",
-                "IsRocket: 5"
+                "IsRocket: 5",
+				"InternalAmmoShots: 5"
             ]
         },
         "InventorySorter": {
@@ -20,12 +21,9 @@
         },
 		"Flags": {
             "flags": [
-                "not_broken",
-                "no_salvage",
-                "autorepair"
+                "not_broken"
             ]
-        },
-		"Lootable" :  { "ItemID" : "Weapon_LRM_ROCKETLAUNCHER5" }
+        }
     },
     "Category": "Missile",
     "Type": "LRM",
@@ -65,10 +63,10 @@
         "Purchasable": true,
         "Manufacturer": "Death Blossom",
         "Model": "Rocket Launcher",
-        "UIName": "RL5",
+        "UIName": "Rocket Pack 5",
         "Id": "Weapon_TANK_ROCKETLAUNCHER5",
         "Name": "RL5",
-        "Details": "Rocket Launchers are cheap, unguided, one-shot missile launchers. Developed by the Marian Hegemony, they often replace more sophisticated equipment that the Periphery nation cannot afford or is unable to repair.<b><color=#F79232>1 SHOT!</color> <b><color=#099ff2>VOLATILE!</color></b>",
+        "Details": "Rocket Launchers are cheap, unguided, one-shot missile launchers. The Pack's are bundles of several Rocket Launchers that can be fired in succession.<b><color=#F79232>5 SALVOS!</color> <b><color=#099ff2>VOLATILE!</color></b>",
         "Icon": "uixSvgIcon_weapon_Missile"
     },
     "BonusValueA": "",
