--- a/RogueModuleTech/Primitive/weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER5.json
@@ -62,7 +62,7 @@
         "Purchasable": true,
         "Manufacturer": "Death Blossom",
         "Model": "Rocket Launcher",
-        "UIName": "Heavy RL5 AOE",
+        "UIName": "AOE Rocket 5",
         "Id": "Weapon_HEAVYAOE_ROCKETLAUNCHER5",
         "Name": "RL5",
         "Details": "Heavy Rocket Launcher operate on the same Principle as the normal widespread Rocket Launcher, being unguided bolted on One Shot Throwaway Launchers do they carrier a heavier payload..<b><color=#F79232>1 SHOT!</color> </b> <b><color=#099ff2>VOLATILE!</color></b>",
