--- a/RogueModuleTech/Primitive/weapons/Weapon_LRM_INFERNOLAUNCHER5.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_LRM_INFERNOLAUNCHER5.json
@@ -60,7 +60,7 @@
         "Purchasable": true,
         "Manufacturer": "Death Blossom",
         "Model": "Rocket Launcher",
-        "UIName": "I-RL5",
+        "UIName": "I-ROCKET 5",
         "Id": "Weapon_LRM_INFERNOLAUNCHER5",
         "Name": "RL5",
         "Details": "Rocket Launchers are cheap, unguided, one-shot missile launchers. Someone took these warheads and replaced their payload with Inferno Gel. <b><color=#F79232>1 SHOT!</color> <b><color=#099ff2>VOLATILE!</color></b>",
