--- a/RogueModuleTech/Primitive/weapons/Weapon_LRM_ROCKETLAUNCHER10.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_LRM_ROCKETLAUNCHER10.json
@@ -57,7 +57,7 @@
         "Purchasable": true,
         "Manufacturer": "Death Blossom",
         "Model": "Rocket Launcher",
-        "UIName": "RL10",
+        "UIName": "Rocket 10",
         "Id": "Weapon_LRM_ROCKETLAUNCHER10",
         "Name": "RL10",
         "Details": "Rocket Launchers are cheap, unguided, one-shot missile launchers. Developed by the Marian Hegemony, they often replace more sophisticated equipment that the Periphery nation cannot afford or is unable to repair.<b><color=#F79232>1 SHOT!</color> <b><color=#099ff2>VOLATILE!</color></b>",
