--- a/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER20.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER20.json
@@ -63,7 +63,7 @@
       ,"I":5
     }
   ],
-  "ColorChangeRule": "t0"
+  "ColorChangeRule": "t0",
     "WeaponEffectID": "WeaponEffect-Weapon_LRM20",
     "Description": {
         "Cost": 29000,
