--- a/RogueModuleTech/Primitive/weapons/Weapon_HEAVY_ROCKETLAUNCHER10.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_HEAVY_ROCKETLAUNCHER10.json
@@ -59,7 +59,7 @@
       ,"I":5
     }
   ],
-  "ColorChangeRule": "t0"
+  "ColorChangeRule": "t0",
     "WeaponEffectID": "WeaponEffect-Weapon_LRM10",
     "Description": {
         "Cost": 15000,
