--- a/RogueModuleTech/Primitive/weapons/Weapon_LRM_INFERNOLAUNCHER10.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_LRM_INFERNOLAUNCHER10.json
@@ -61,7 +61,7 @@
       ,"I":5
     }
   ],
-  "ColorChangeRule": "t0"
+  "ColorChangeRule": "t0",
     "WeaponEffectID": "WeaponEffect-Weapon_LRM10",
     "Description": {
         "Cost": 15000,
