--- a/RogueModuleTech/quirks/weapon/Weapon_QUIRK_INFERNOLAUNCHER15.json
+++ b/RogueModuleTech/quirks/weapon/Weapon_QUIRK_INFERNOLAUNCHER15.json
@@ -67,7 +67,7 @@
       ,"I":5
     }
   ],
-  "ColorChangeRule": "t0"
+  "ColorChangeRule": "t0",
     "WeaponEffectID": "WeaponEffect-Weapon_LRM15",
     "Description": {
         "Cost": 220000,
