Missing     "APCriticalChanceMultiplier": See Note!
These looked accidental. I left alone a lot of rocket launchers, and things in the primitive, quirk and melee folders that i thought mighth have no TAC chance on purpose

--- a/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
+++ b/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
@@ -1,8 +1,10 @@
 {
     "Custom": {
         "Category": [
-			{ "CategoryID": "w/a/o/mortair" }
-		],
+            {
+                "CategoryID": "w/a/o/mortair"
+            }
+        ],
         "InventorySorter": {
             "SortKey": "03011"
         },
@@ -10,7 +12,7 @@
             "Bonuses": [
                 "WpnAccuracy: +1",
                 "Indirect",
-				"NoAA",
+                "NoAA",
                 "IsMortar"
             ]
         }
@@ -36,6 +38,7 @@
     "HeatDamage": 0,
     "AccuracyModifier": -1,
     "CriticalChanceMultiplier": 1,
+    "APCriticalChanceMultiplier": 0.35,
     "AOECapable": false,
     "IndirectFireCapable": true,
     "RefireModifier": 0,
@@ -43,10 +46,10 @@
     "ProjectilesPerShot": 1,
     "AttackRecoil": 1,
     "Instability": 2,
-	"AMSImmune": true,
-	"AlternateDamageCalc": true,
-	"FireTerrainChance": 0.01,
-	"CantHitUnaffecedByPathing": true,
+    "AMSImmune": true,
+    "AlternateDamageCalc": true,
+    "FireTerrainChance": 0.01,
+    "CantHitUnaffecedByPathing": true,
     "WeaponEffectID": "WeaponEffect-Weapon_LRM5",
     "Description": {
         "Cost": 80000,
