--- a/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
+++ b/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
@@ -1,10 +1,8 @@
 {
     "Custom": {
         "Category": [
-            {
-                "CategoryID": "w/a/o/mortair"
-            }
-        ],
+			{ "CategoryID": "w/a/o/mortair" }
+		],
         "InventorySorter": {
             "SortKey": "03011"
         },
@@ -12,7 +10,7 @@
             "Bonuses": [
                 "WpnAccuracy: +1",
                 "Indirect",
-                "NoAA",
+				"NoAA",
                 "IsMortar"
             ]
         }
@@ -38,7 +36,7 @@
     "HeatDamage": 0,
     "AccuracyModifier": -1,
     "CriticalChanceMultiplier": 1,
-    "APCriticalChanceMultiplier": 0.35,
+    "APCriticalChanceMultiplier": 0.02,
     "AOECapable": false,
     "IndirectFireCapable": true,
     "RefireModifier": 0,
@@ -46,10 +44,10 @@
     "ProjectilesPerShot": 1,
     "AttackRecoil": 1,
     "Instability": 2,
-    "AMSImmune": true,
-    "AlternateDamageCalc": true,
-    "FireTerrainChance": 0.01,
-    "CantHitUnaffecedByPathing": true,
+	"AMSImmune": true,
+	"AlternateDamageCalc": true,
+	"FireTerrainChance": 0.01,
+	"CantHitUnaffecedByPathing": true,
     "WeaponEffectID": "WeaponEffect-Weapon_LRM5",
     "Description": {
         "Cost": 80000,
