--- a/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -170,8 +170,9 @@
 },
 "AIPeerToPeerNodeEnabled": false,
 "AIPeerToPeerFirewallPierceThrough":false,
-"WaterHeightFix":true,
+"AIMStandalone":"AttackImprovementMod.dll",
 "AdvancedCirtProcessing": true,
 "DestroyedComponentsCritTrap": true,
-"CritLocationTransfer": true
+"CritLocationTransfer": true,
+"APMinCritChance": 0.1
 }
