--- a/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -1,5 +1,5 @@
 {
-	"debugLog": false,
+	"debugLog": true,
 	"modHTTPServer": false,
 	"modHTTPListen": "http://localhost:65080/",
 	"WeaponRealizerStandalone": "WeaponRealizer.dll",
