Rocket pack traits

--- a/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER15.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER15.json
@@ -11,11 +11,10 @@
     },
     "BonusDescriptions": {
       "Bonuses": [
-        "1shot",
+        "InternalAmmoShots: 5",
         "InternalAmmo: 4",
         "AMSChance: -30%",
-        "IsRocket: 15",
-        "InternalAmmoShots: 5"
+        "IsRocket: 15"
       ]
     },
     "InventorySorter": {
