--- a/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER5.json
@@ -11,11 +11,10 @@
     },
     "BonusDescriptions": {
       "Bonuses": [
-        "1shot",
+        "InternalAmmoShots: 5",
         "InternalAmmo: 4",
         "AMSChance: -30%",
-        "IsRocket: 5",
-        "InternalAmmoShots: 5"
+        "IsRocket: 5"
       ]
     },
     "InventorySorter": {
@@ -93,9 +92,7 @@
   "AllowedLocations": "All",
   "DisallowedLocations": "All",
   "CriticalComponent": false,
-  "statusEffects": [
-
-  ],
+  "statusEffects": [],
   "ComponentTags": {
     "items": [
       "BLACKLISTED",
