--- a/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -172,7 +172,7 @@
 "AIPeerToPeerFirewallPierceThrough":false,
 "AIMStandalone":"AttackImprovementMod.dll",
 "AdvancedCirtProcessing": true,
-"DestroyedComponentsCritTrap": true,
+"DestroyedComponentsCritTrap": false,
 "CritLocationTransfer": true,
 "APMinCritChance": 0.1
 }
