--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -117,15 +117,18 @@
     "Enabled": true
   },
   "CompressFloatieMessages": {
-    "DebugDestroyedFloaties": false,
+    "DebugDestroyedFloaties": true,
     "Enabled": true
   },
-  "CriticalEffects": {
-    "DescriptionTemplate":
-      "Critical Effects:<b><color=#F79B26FF>\r\n{{elements}}</color></b>\r\n{{originalDescription}}",
-    "DescriptionUseName": false,
-    "Enabled": true
-  },
+  "CriticalEffects" : {
+        "Enabled" : true,
+        "EnabledDescription" : "Allows custom multiple critical hit states for individual components.",
+        "DescriptionTemplate" : "Critical Effects:<b><color=#F79B26FF>\r\n{{elements}}</color></b>\r\n{{originalDescription}}",
+        "ElementTemplate" : " <indent=10%><line-indent=-5%><line-height=65%>{{element}}</line-height></line-indent></indent>\r\n",
+        "DescriptionUseName" : false,
+        "CritFloatieMessage" : "{0} CRIT",
+        "DestroyedFloatieMessage" : "{0} DESTROYED"
+    },
   "DebugCycleCombatSounds": {
     "Enabled": false
   },
