--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -139,7 +139,7 @@
     "CompressFloatieMessages" : {
         "Enabled" : true,
         "EnabledDescription" : "Compresses similar floatie messages to a single message with a multiplier. E.g. MEDIUM LASER DESTROYED x 4",
-        "DebugDestroyedFloaties" : false
+        "DebugDestroyedFloaties" : true
     },
     "CriticalEffects" : {
         "Enabled" : true,
