--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -113,13 +113,15 @@
   "BattleTechLoadFix": {
     "Enabled": true
   },
-  "ComponentExplosions": {
-    "Enabled": true
-  },
-  "CompressFloatieMessages": {
-    "DebugDestroyedFloaties": true,
-    "Enabled": true
-  },
+  "ComponentExplosions" : {
+        "Enabled" : true,
+        "EnabledDescription" : "Allows each component to define destructive forces in case they explode, also implements proper CASE."
+    },
+    "CompressFloatieMessages" : {
+        "Enabled" : false,
+        "EnabledDescription" : "Compresses similar floatie messages to a single message with a multiplier. E.g. MEDIUM LASER DESTROYED x 4",
+        "DebugDestroyedFloaties" : true
+    },
   "CriticalEffects" : {
         "Enabled" : true,
         "EnabledDescription" : "Allows custom multiple critical hit states for individual components.",
