--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -137,7 +137,7 @@
         "EnabledDescription" : "Allows each component to define destructive forces in case they explode, also implements proper CASE."
     },
     "CompressFloatieMessages" : {
-        "Enabled" : true,
+        "Enabled" : false,
         "EnabledDescription" : "Compresses similar floatie messages to a single message with a multiplier. E.g. MEDIUM LASER DESTROYED x 4",
         "DebugDestroyedFloaties" : true
     },
