--- a/RogueModuleTech/Primitive/weapons/Weapon_LRM_FLARELAUNCHER5.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_LRM_FLARELAUNCHER5.json
@@ -1,8 +1,9 @@
 {
   "Custom": {
     "Category": [
+		{ "CategoryID": "AMS" },
       {
-        "CategoryID": "w/m/s/rl"
+        "CategoryID": "w/s/m/pa"
       }
     ],
     "ComponentExplosion": {
@@ -32,7 +33,7 @@
       ]
     }
   },
-  "Category": "Missile",
+  "Category": "AntiPersonnel",
   "Type": "LRM",
   "WeaponSubType": "LRM5",
   "MinRange": 0,
