--- a/RogueModuleTech/AMS/Weapon_LRM_FLARELAUNCHER_AMS.json
+++ b/RogueModuleTech/AMS/Weapon_LRM_FLARELAUNCHER_AMS.json
@@ -3,7 +3,7 @@
         "Category": [
             {
                 "CategoryID": "w/s/a/ams",
-                "CategoryID": "w/m/s/rl"
+                "CategoryID": "w/s/m/pa"
             }
         ],
         "ComponentExplosion": {
@@ -22,7 +22,7 @@
             "SortKey": "03001"
         }
     },
-    "Category": "Missile",
+    "Category": "AntiPersonnel",
     "Type": "LRM",
     "WeaponSubType": "LRM5",
     "MinRange": 0,
