--- a/RogueTechDebug/Debug/settings.json
+++ b/RogueTechDebug/Debug/settings.json
@@ -2,31 +2,63 @@
    "loggerLevels" : [   
       {
          "k" : "CombatLog.Attacking",
-         "v" : "Error"
+         "v" : "Debug"
       },
       {
          "k" : "CombatLog.AbilitiesAndEffects",
-         "v" : "Error"
+         "v" : "Debug"
       },
       {
          "k" : "CombatLog.RoundSequence",
-         "v" : "Error"
+         "v" : "Debug"
       },
       {
          "k" : "CombatLog.ActorActivation",
-         "v" : "Error"
+         "v" : "Debug"
       },
       {
          "k" : "CombatLog.Heat",
-         "v" : "Error"
+         "v" : "Debug"
       },
       {
-         "k" : "ErrorLog.Pilot",
-         "v" : "Error"
+         "k" : "CombatLog.AbstractActor",
+         "v" : "Debug"
+      },
+	  {
+         "k" : "CombatLog.CombatSelectionHandler",
+         "v" : "Debug"
+      },
+	  {
+         "k" : "DebugLog.Pilot",
+         "v" : "Debug"
       },
       {
          "k" : "CombatLog.Initialization",
-         "v" : "Error"
+         "v" : "Debug"
+      },
+	  {
+         "k" : "LevelLoader",
+         "v" : "Debug"
+      },
+	  {
+         "k" : "BattleTechServerGameVerification.MechData",
+         "v" : "Debug"
+      },
+	  {
+         "k" : "Data.AssetBundleManager",
+         "v" : "Debug"
+      },
+	  {
+         "k" : "Data.DataManager.LoadRequests",
+         "v" : "Debug"
+      },
+	  {
+         "k" : "Data.ResourceLocator",
+         "v" : "Debug"
+      },
+	  {
+         "k" : "EncounterLogic.ContractOverride",
+         "v" : "Debug"
       }
    ],
       "fileLogAppenders" : [
