--- a/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -174,5 +174,7 @@
 "AdvancedCirtProcessing": true,
 "DestroyedComponentsCritTrap": false,
 "CritLocationTransfer": true,
-"APMinCritChance": 0.1
+"APMinCritChance": 0.1,
+"NoCritFloatieMessage": true,
+"RemoveFromCritRollStatName": "ignore_damage"
 }
