--- a/BTRandomStartByDifficultyMenu/Menus/CareerDifficultySettings.json
+++ b/BTRandomStartByDifficultyMenu/Menus/CareerDifficultySettings.json
@@ -6,8 +6,8 @@
 			"TelemetryEventName": "",
 			"UIOrder": 0,
 			"Tooltip": "Ironman Mode restricts you to only one save file. All consequences, including 'Mech loss, MechWarrior death, and failed missions are <i>permanent</i>. <color=#F79B26>Running out of funds <i>or</i> failing any Priority Mission will result in campaign loss. This setting is intended for veterans and those seeking a significant challenge.</color>",
-			"Enabled": true,
-			"Visible": true,
+			"Enabled": false,
+			"Visible": false,
 			"Toggle": true,
 			"StartOnly": true,
 			"DefaultIndex": 0,
@@ -104,7 +104,7 @@
 			"TelemetryEventName": "",
             "UIOrder" : 1,
             "Tooltip" : "When this setting is enabled, new 'Mechs you acquire through salvage will not come with equipped weapons or components, and will need to be customized from scratch.",
-            "Enabled" : true,
+            "Enabled" : false,
             "Visible" : false,
             "Toggle" : true,
             "StartOnly" : true,
@@ -149,7 +149,7 @@
 			"Enabled": true,
 			"Visible": true,
 			"Toggle": false,
-			"StartOnly": false,
+			"StartOnly": true,
 			"DefaultIndex": 2,
 			"Options": [
 				{
