Big mega whoopsie

--- a/BTRandomStartByDifficultyMenu/Menus/CareerDifficultySettings.json
+++ b/BTRandomStartByDifficultyMenu/Menus/CareerDifficultySettings.json
@@ -47,7 +47,7 @@
         "Name": "Friendly Fire",
         "TelemetryEventName": "",
         "UIOrder": 0,
-        "Tooltip": "Select what Stray Shot behavior you want - No Stray Shots, Enemies/Neutral, Friendly Fire",
+        "Tooltip": "Select what Stray Shot behavior you want - No Stray Shots, Neutrals Only, Friendly Fire",
         "Enabled": true,
         "Visible": true,
         "Toggle": false,
@@ -70,7 +70,7 @@
           },
           {
             "ID": "diff_FF_Neutral",
-            "Name": "Enemies",
+            "Name": "Neutrals",
             "TelemetryEventDesc": "",
             "DifficultyValue": 0,
             "CareerScoreModifier" : 0,
