--- a/RogueFlashPointModule/settings.json
+++ b/RogueFlashPointModule/settings.json
@@ -9,8 +9,10 @@
 		"Owner",
 		"Player2sMercUnit",
 		"Unknown",
+		"Faction_Hostile",
 		"Faction_Neutral",
 		"Faction_Employer",
+		"Faction_EmployersAlly"
 		"Faction_Target",
 		"Faction_TargetsAlly",
 		"Nautilus",
