few minor things

--- a/RogueFlashPointModule/settings.json
+++ b/RogueFlashPointModule/settings.json
@@ -3,18 +3,30 @@
 	"debugAllRepeat": true,
 	"excludedFactions": [
 		"INVALID_UNSET",
+		"invalid_unset",
 		"NoFaction",
+		"nofaction",
 		"SelfEmployed",
+		"selfemployed",
 		"Player1sMercUnit",
+		"player1smercenit",
+		"player2smercmnit",
 		"Owner",
-		"Player2sMercUnit",
+		"owner",		
 		"Unknown",
+		"unknown",
 		"Faction_Hostile",
+		"faction_hostile",
 		"Faction_Neutral",
+		"faction_neutral",
 		"Faction_Employer",
-		"Faction_EmployersAlly"
+		"faction_employer",
+		"Faction_EmployersAlly",
+		"faction_employersally",
 		"Faction_Target",
+		"faction_target",
 		"Faction_TargetsAlly",
+		"faction_targetsally",
 		"Nautilus",
 		"MercenaryReviewBoard",
 		"Betrayers",
