--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -1,7 +1,9 @@
 {
     "AccuracyEffects" : {
         "Enabled" : true,
-        "EnabledDescription" : "Enables statistic effects for arm accuracy."
+        "EnabledDescription" : "Enables statistic effects for arm accuracy.",
+        "CombatHUDTooltipName" : "WEAPON MOUNT",
+        "CombatHUDTooltipNameDescription" : "The name to call the ARM MOUNTED accuracy bonus in the combat tooltips."
     },
     "ArmActuator" : {
         "Enabled" : true,
@@ -149,6 +151,10 @@
         "DescriptionUseName" : false,
         "CritFloatieMessage" : "{0} CRIT",
         "DestroyedFloatieMessage" : "{0} DESTROYED"
+    },
+    "DamageIgnore" : {
+        "Enabled" : true,
+        "EnabledDescription" : "Enables ignore_damage flag."
     },
     "DebugCycleCombatSounds" : {
         "Enabled" : false,
