--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -1,6 +1,9 @@
 {
   "AccuracyEffects": {
-    "Enabled": true
+    "Enabled": true,
+	        "EnabledDescription" : "Enables statistic effects for arm accuracy.",
+	        "CombatHUDTooltipName" : "WEAPON MOUNT",
+        "CombatHUDTooltipNameDescription" : "The name to call the ARM MOUNTED accuracy bonus in the combat tooltips."
   },
   "ArmActuator": {
     "ForceFullDefaultActuators": true,
