--- a/RogueModuleTech/Primitive/weapons/Weapon_LRM_FLARELAUNCHER5.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_LRM_FLARELAUNCHER5.json
@@ -110,22 +110,13 @@
         "duration": 2,
         "ticksOnActivations": true,
         "useActivationsOfTarget": true,
-        "ticksOnEndOfRound": false,
-        "ticksOnMovements": false,
         "stackLimit": 6,
-        "clearedWhenAttacked": false
       },
       "targetingData": {
         "effectTriggerType": "OnHit",
-        "triggerLimit": 0,
-        "extendDurationOnTrigger": 0,
-        "specialRules": "NotSet",
         "effectTargetType": "NotSet",
-        "range": 0,
-        "forcePathRebuild": false,
-        "forceVisRebuild": false,
         "showInTargetPreview": false,
-        "showInStatusPanel": true
+        "showInStatusPanel": truae
       },
       "effectType": "StatisticEffect",
       "Description": {
@@ -142,41 +133,21 @@
         "operation": "Float_Add",
         "modValue": "1.0",
         "modType": "System.Single",
-        "additionalRules": "NotSet",
-        "targetCollection": "NotSet",
-        "targetWeaponCategory": "NotSet",
-        "targetWeaponType": "NotSet",
-        "targetAmmoCategory": "NotSet",
-        "targetWeaponSubType": "NotSet"
-      },
-      "tagData": null,
-      "floatieData": null,
-      "actorBurningData": null,
-      "vfxData": null,
-      "instantModData": null,
-      "poorlyMaintainedEffectData": null
+        "targetCollection": "Weapon"
+      }
     },
     {
       "durationData": {
         "duration": 2,
         "ticksOnActivations": true,
         "useActivationsOfTarget": true,
-        "ticksOnEndOfRound": false,
-        "ticksOnMovements": false,
         "stackLimit": 6,
-        "clearedWhenAttacked": false
       },
       "targetingData": {
         "effectTriggerType": "OnHit",
-        "triggerLimit": 0,
-        "extendDurationOnTrigger": 0,
-        "specialRules": "NotSet",
         "effectTargetType": "NotSet",
-        "range": 0,
-        "forcePathRebuild": false,
-        "forceVisRebuild": false,
         "showInTargetPreview": false,
-        "showInStatusPanel": true
+        "showInStatusPanel": false
       },
       "effectType": "StatisticEffect",
       "Description": {
@@ -198,22 +169,13 @@
         "duration": 2,
         "ticksOnActivations": true,
         "useActivationsOfTarget": true,
-        "ticksOnEndOfRound": false,
-        "ticksOnMovements": false,
-        "stackLimit": 6,
-        "clearedWhenAttacked": false
+        "stackLimit": 6
       },
       "targetingData": {
         "effectTriggerType": "OnHit",
-        "triggerLimit": 0,
-        "extendDurationOnTrigger": 0,
-        "specialRules": "NotSet",
         "effectTargetType": "NotSet",
-        "range": 0,
-        "forcePathRebuild": false,
-        "forceVisRebuild": false,
         "showInTargetPreview": false,
-        "showInStatusPanel": true
+        "showInStatusPanel": false
       },
       "effectType": "StatisticEffect",
       "Description": {
