--- a/RogueModuleTech/Primitive/weapons/Weapon_LRM_FLARELAUNCHER5.json
+++ b/RogueModuleTech/Primitive/weapons/Weapon_LRM_FLARELAUNCHER5.json
@@ -110,13 +110,13 @@
         "duration": 2,
         "ticksOnActivations": true,
         "useActivationsOfTarget": true,
-        "stackLimit": 6,
+        "stackLimit": 6
       },
       "targetingData": {
         "effectTriggerType": "OnHit",
         "effectTargetType": "NotSet",
         "showInTargetPreview": false,
-        "showInStatusPanel": truae
+        "showInStatusPanel": true
       },
       "effectType": "StatisticEffect",
       "Description": {
@@ -141,7 +141,7 @@
         "duration": 2,
         "ticksOnActivations": true,
         "useActivationsOfTarget": true,
-        "stackLimit": 6,
+        "stackLimit": 6
       },
       "targetingData": {
         "effectTriggerType": "OnHit",
