--- a/MissionControl/settings.json
+++ b/MissionControl/settings.json
@@ -3,12 +3,15 @@
   "DebugSkirmishMode": true,
   "DisableIfFlashpointContract": true,
   "HotDrop": {
+    "Enable": false,
     "GuardOnHotDrop": false,
-    "EvasionPipsOnHotDrop": 0,
-    "IncludeEnemies": false,
+    "EvasionPipsOnHotDrop": 4,
+    "IncludeEnemies": true,
+    "IncludeAllyTurrets": false,
+    "IncludeEnemyTurrets": false,
   },
   "AdditionalLances": {
-    "Enable": false,
+    "Enable": true,
     "UseElites": true,
     "UseDialogue": true,
     "SkullValueMatters": true,
@@ -22,11 +25,89 @@
     }
   },
   "ExtendedLances": {
-    "Enable": false,
+    "Enable": true,
     "Autofill": true,
     "LanceSizes": {
-      "5": [],
-      "6": [],
+      "5": [
+        {
+          "Faction": "ClanBurrock",
+          "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClanCloudCobra",
+          "DifficultyMod": -2
+        },{
+          "Faction": "ClanCoyote",
+          "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClanDiamondShark",
+          "DifficultyMod": -2
+        },
+		{
+          "Faction": "ClanFireMandrill",
+          "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClanGhostBear",
+          "DifficultyMod": -2
+        },
+		{
+          "Faction": "ClanGoliathScorpion",
+          "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClanHellsHorses",
+          "DifficultyMod": -2
+        },
+		{
+          "Faction": "ClanIceHellion",
+          "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClanJadeFalcon",
+          "DifficultyMod": -2
+        },
+		{
+          "Faction": "ClanNovaCat",
+          "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClansGeneric",
+          "DifficultyMod": -2
+        },
+		{
+          "Faction": "ClanSmokeJaguar",
+          "DifficultyMod": -2
+        },
+		{
+          "Faction": "ClanSnowRaven",
+          "DifficultyMod": -2
+        },
+		{
+          "Faction": "ClanStarAdder",
+          "DifficultyMod": -2
+        },
+		{
+          "Faction": "ClanSteelViper",
+          "DifficultyMod": -2
+        },
+		{
+          "Faction": "ClanWolf",
+          "DifficultyMod": -2
+        }],
+      "6": [{
+        "Faction": "Comstar",
+        "DifficultyMod": -3
+      },
+	  {
+        "Faction": "WordOfBlake",
+        "DifficultyMod": -3
+      }],
     }
   },
+  "ExtendedBoundaries": true,
+  "DynamicWithdraw": {
+    "Enabled": true,
+  }
 }
