--- a/MissionControl/settings.json
+++ b/MissionControl/settings.json
@@ -12,7 +12,7 @@
   },
   "AdditionalLances": {
     "Enable": true,
-    "UseElites": true,
+    "UseElites": false,
     "UseDialogue": true,
     "SkullValueMatters": true,
     "BasedOnVisibleSkullValue": true,
@@ -31,78 +31,78 @@
       "5": [
         {
           "Faction": "ClanBurrock",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
         {
           "Faction": "ClanCloudCobra",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },{
           "Faction": "ClanCoyote",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
         {
           "Faction": "ClanDiamondShark",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
 		{
           "Faction": "ClanFireMandrill",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
         {
           "Faction": "ClanGhostBear",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
 		{
           "Faction": "ClanGoliathScorpion",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
         {
           "Faction": "ClanHellsHorses",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
 		{
           "Faction": "ClanIceHellion",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
         {
           "Faction": "ClanJadeFalcon",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
 		{
           "Faction": "ClanNovaCat",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
         {
           "Faction": "ClansGeneric",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
 		{
           "Faction": "ClanSmokeJaguar",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
 		{
           "Faction": "ClanSnowRaven",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
 		{
           "Faction": "ClanStarAdder",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
 		{
           "Faction": "ClanSteelViper",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         },
 		{
           "Faction": "ClanWolf",
-          "DifficultyMod": -2
+          "DifficultyMod": -3
         }],
       "6": [{
         "Faction": "Comstar",
-        "DifficultyMod": -3
+        "DifficultyMod": -4
       },
 	  {
         "Faction": "WordOfBlake",
-        "DifficultyMod": -3
+        "DifficultyMod": -4
       }],
     }
   },
