--- a/MissionControl/lances/Damaged_Easy_MechsOnly_50_D3.json
+++ b/MissionControl/lances/Damaged_Easy_MechsOnly_50_D3.json
@@ -1,29 +1,16 @@
 {
-    "Description": {
-        "Id": "lancedef_mixed_d3_vtol_battle",
-        "Name": "Dynamic Dif 3",
-        "Details": "",
-        "Icon": "",
-        "Cost": 0,
-        "Rarity": 0,
-        "Purchasable": false
-    },
-    "Difficulty": 3,
-    "LanceTags": {
-        "items": [
-            "lance_bracket_low",
-            "lance_type_battle",
-            "lance_type_fire",
-            "lance_type_dynamic",
-            "lance_type_mixed",
-            "lance_type_notallvehicles",
-            "lance_type_vtol",
-            "lance_type_roguetech"
-        ],
-        "tagSetSourceFile": "Tags/LanceTags"
-    },
-    "LanceUnits": [
-        {
+  "lanceKey": "Damaged_Easy_MechsOnly_50_D3",
+  "lanceDefId": "Manual",
+  "lanceTagSet": {
+    "items": [
+    ]
+  },
+   "spawnEffectTags": {
+    "items": ["spawn_poorly_maintained_50"]
+  },
+  "lanceDifficultyAdjustment": 0,
+  "unitSpawnPointOverrideList": [
+   {
             "unitType": "Mech",
             "unitId": "Tagged",
             "unitSimGameID": null,
@@ -31,20 +18,18 @@
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_mech",
-                    "unit_advanced",
-                    "{CUR_TEAM.faction}"
+                    "unit_mech"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
-                    "unit_legendary",
                     "unit_bracket_high",
-                    "unit_lance_vanguard",
+                    "unit_lance_assassin",
                     "unit_assault",
-                    "unit_heavy"
+                    "unit_heavy",
+                    "unit_medium"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
@@ -62,22 +47,60 @@
             "locked": false
         },
         {
-            "unitType": "Vehicle",
+            "unitType": "Mech",
             "unitId": "Tagged",
             "unitSimGameID": null,
             "pilotId": "Tagged",
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vehicle",
-                    "{CUR_TEAM.faction}",
-                    "unit_lance_assassin"
+                    "unit_mech",
+                    "unit_lance_support"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
+                    "unit_legendary",
+                    "unit_bracket_high",
+                    "unit_advanced",
+                    "unit_assault",
+                    "unit_heavy"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_d3"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Mech",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_mech",
+                    "unit_lance_support"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_advanced",
+                    "unit_legendary",
+                    "unit_bracket_med",
                     "unit_bracket_high",
                     "unit_assault",
                     "unit_heavy"
@@ -86,8 +109,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
+                    "pilot_npc_d3"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -98,15 +120,15 @@
             "locked": false
         },
         {
-            "unitType": "Vehicle",
+            "unitType": "Mech",
             "unitId": "Tagged",
             "unitSimGameID": null,
             "pilotId": "Tagged",
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vtol",
-                    "{CUR_TEAM.faction}"
+                    "unit_mech",
+					"unit_predator"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
@@ -114,6 +136,8 @@
                 "items": [
                     "unit_noncombatant",
                     "unit_legendary",
+                    "unit_bracket_high",
+                    "unit_lance_assassin",
                     "unit_assault",
                     "unit_heavy"
                 ],
@@ -121,43 +145,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
-                ],
-                "tagSetSourceFile": "Tags/PilotTags"
-            },
-            "excludedPilotTagSet": {
-                "items": null,
-                "tagSetSourceFile": "Tags/PilotTags"
-            },
-            "locked": false
-        },
-        {
-            "unitType": "Vehicle",
-            "unitId": "Tagged",
-            "unitSimGameID": null,
-            "pilotId": "Tagged",
-            "pilotSimGameID": null,
-            "unitTagSet": {
-                "items": [
-                    "unit_vtol",
-                    "{CUR_TEAM.faction}"
-                ],
-                "tagSetSourceFile": "Tags/UnitTags"
-            },
-            "excludedUnitTagSet": {
-                "items": [
-                    "unit_noncombatant",
-                    "unit_legendary",
-                    "unit_assault",
-                    "unit_heavy"
-                ],
-                "tagSetSourceFile": "Tags/UnitTags"
-            },
-            "pilotTagSet": {
-                "items": [
-                    "pilot_npc_tanker_d3",
-					"{CUR_TEAM.faction}"
+                    "pilot_npc_d3"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -167,5 +155,5 @@
             },
             "locked": false
         }
-    ]
+  ]
 }
