--- a/MissionControl/lances/Damaged_Easy_MechsOnly_50_D4.json
+++ b/MissionControl/lances/Damaged_Easy_MechsOnly_50_D4.json
@@ -1,29 +1,16 @@
 {
-    "Description": {
-        "Id": "lancedef_mixed_d3_vtol_battle",
-        "Name": "Dynamic Dif 3",
-        "Details": "",
-        "Icon": "",
-        "Cost": 0,
-        "Rarity": 0,
-        "Purchasable": false
-    },
-    "Difficulty": 3,
-    "LanceTags": {
-        "items": [
-            "lance_bracket_low",
-            "lance_type_battle",
-            "lance_type_fire",
-            "lance_type_dynamic",
-            "lance_type_mixed",
-            "lance_type_notallvehicles",
-            "lance_type_vtol",
-            "lance_type_roguetech"
-        ],
-        "tagSetSourceFile": "Tags/LanceTags"
-    },
-    "LanceUnits": [
-        {
+  "lanceKey": "Damaged_Easy_MechsOnly_50_D4",
+  "lanceDefId": "Manual",
+  "lanceTagSet": {
+    "items": [
+    ]
+  },
+   "spawnEffectTags": {
+    "items": ["spawn_poorly_maintained_50"]
+  },
+  "lanceDifficultyAdjustment": 0,
+  "unitSpawnPointOverrideList": [
+   {
             "unitType": "Mech",
             "unitId": "Tagged",
             "unitSimGameID": null,
@@ -32,7 +19,6 @@
             "unitTagSet": {
                 "items": [
                     "unit_mech",
-                    "unit_advanced",
                     "{CUR_TEAM.faction}"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
@@ -40,9 +26,7 @@
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
-                    "unit_legendary",
-                    "unit_bracket_high",
-                    "unit_lance_vanguard",
+                    "unit_lance_assassin",
                     "unit_assault",
                     "unit_heavy"
                 ],
@@ -50,7 +34,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_d3",
+                    "pilot_npc_d4",
                     "pilot_npc_high"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
@@ -62,22 +46,23 @@
             "locked": false
         },
         {
-            "unitType": "Vehicle",
+            "unitType": "Mech",
             "unitId": "Tagged",
             "unitSimGameID": null,
             "pilotId": "Tagged",
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vehicle",
+                    "unit_mech",
                     "{CUR_TEAM.faction}",
-                    "unit_lance_assassin"
+                    "unit_lance_support"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
+                    "unit_legendary",
                     "unit_bracket_high",
                     "unit_assault",
                     "unit_heavy"
@@ -86,8 +71,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
+                    "pilot_npc_d4"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -98,14 +82,15 @@
             "locked": false
         },
         {
-            "unitType": "Vehicle",
+            "unitType": "Mech",
             "unitId": "Tagged",
             "unitSimGameID": null,
             "pilotId": "Tagged",
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vtol",
+                    "unit_mech",
+                    "unit_lance_support",
                     "{CUR_TEAM.faction}"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
@@ -114,6 +99,8 @@
                 "items": [
                     "unit_noncombatant",
                     "unit_legendary",
+                    "unit_bracket_high",
+                    "unit_advanced",
                     "unit_assault",
                     "unit_heavy"
                 ],
@@ -121,8 +108,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
+                    "pilot_npc_d4"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -133,14 +119,15 @@
             "locked": false
         },
         {
-            "unitType": "Vehicle",
+            "unitType": "Mech",
             "unitId": "Tagged",
             "unitSimGameID": null,
             "pilotId": "Tagged",
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vtol",
+                    "unit_mech",
+					"unit_predator",
                     "{CUR_TEAM.faction}"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
@@ -149,6 +136,8 @@
                 "items": [
                     "unit_noncombatant",
                     "unit_legendary",
+                    "unit_bracket_high",
+                    "unit_lance_assassin",
                     "unit_assault",
                     "unit_heavy"
                 ],
@@ -156,8 +145,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-					"{CUR_TEAM.faction}"
+                    "pilot_npc_d4"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -167,5 +155,5 @@
             },
             "locked": false
         }
-    ]
+  ]
 }
