--- a/MissionControl/lances/Damaged_Easy_Mixed_25_D1.json
+++ b/MissionControl/lances/Damaged_Easy_Mixed_25_D1.json
@@ -1,29 +1,16 @@
 {
-    "Description": {
-        "Id": "lancedef_mixed_d3_vtol_battle",
-        "Name": "Dynamic Dif 3",
-        "Details": "",
-        "Icon": "",
-        "Cost": 0,
-        "Rarity": 0,
-        "Purchasable": false
-    },
-    "Difficulty": 3,
-    "LanceTags": {
-        "items": [
-            "lance_bracket_low",
-            "lance_type_battle",
-            "lance_type_fire",
-            "lance_type_dynamic",
-            "lance_type_mixed",
-            "lance_type_notallvehicles",
-            "lance_type_vtol",
-            "lance_type_roguetech"
-        ],
-        "tagSetSourceFile": "Tags/LanceTags"
-    },
-    "LanceUnits": [
-        {
+  "lanceKey": "Damaged_Easy_Mixed_25_D1",
+  "lanceDefId": "Manual",
+  "lanceTagSet": {
+    "items": [
+    ]
+  },
+   "spawnEffectTags": {
+    "items": ["spawn_poorly_maintained_25"]
+  },
+  "lanceDifficultyAdjustment": 0,
+  "unitSpawnPointOverrideList": [
+  {
             "unitType": "Mech",
             "unitId": "Tagged",
             "unitSimGameID": null,
@@ -31,18 +18,17 @@
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_mech",
-                    "unit_advanced",
-                    "{CUR_TEAM.faction}"
+                    "unit_mech"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
-                    "unit_legendary",
+                    "unit_advanced",
+                    "unit_bracket_med",
                     "unit_bracket_high",
-                    "unit_lance_vanguard",
+                    "unit_lance_assassin",
                     "unit_assault",
                     "unit_heavy"
                 ],
@@ -50,7 +36,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_d3",
+                    "pilot_npc_d1",
                     "pilot_npc_high"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
@@ -70,24 +56,25 @@
             "unitTagSet": {
                 "items": [
                     "unit_vehicle",
-                    "{CUR_TEAM.faction}",
-                    "unit_lance_assassin"
+                    "unit_lance_support"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
+                    "unit_advanced",
+                    "unit_bracket_med",
                     "unit_bracket_high",
                     "unit_assault",
-                    "unit_heavy"
+                    "unit_heavy",
+                    "unit_vbied"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
+                    "pilot_npc_tanker_d1"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -105,24 +92,30 @@
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vtol",
-                    "{CUR_TEAM.faction}"
+                    "unit_vehicle",
+                    "unit_lance_support"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
+                    "unit_advanced",
                     "unit_legendary",
+                    "unit_bracket_med",
+                    "unit_bracket_high",
+                    "unit_turret",
+                    "unit_superheavy",
+                    "unit_superheavytank",
                     "unit_assault",
-                    "unit_heavy"
+                    "unit_heavy",
+                    "unit_vbied"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
+                    "pilot_npc_tanker_d1"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -133,22 +126,28 @@
             "locked": false
         },
         {
-            "unitType": "Vehicle",
+            "unitType": "Mech",
             "unitId": "Tagged",
             "unitSimGameID": null,
             "pilotId": "Tagged",
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vtol",
-                    "{CUR_TEAM.faction}"
+                    "unit_mech"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
+                    "unit_advanced",
                     "unit_legendary",
+                    "unit_bracket_med",
+                    "unit_bracket_high",
+                    "unit_turret",
+                    "unit_superheavy",
+                    "unit_superheavytank",
+                    "unit_lance_assassin",
                     "unit_assault",
                     "unit_heavy"
                 ],
@@ -156,8 +155,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-					"{CUR_TEAM.faction}"
+                    "pilot_npc_d1"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -167,5 +165,5 @@
             },
             "locked": false
         }
-    ]
+  ]
 }
