--- a/MissionControl/lances/Damaged_Easy_TanksOnly_50_D3.json
+++ b/MissionControl/lances/Damaged_Easy_TanksOnly_50_D3.json
@@ -1,48 +1,30 @@
 {
-    "Description": {
-        "Id": "lancedef_mixed_d3_vtol_battle",
-        "Name": "Dynamic Dif 3",
-        "Details": "",
-        "Icon": "",
-        "Cost": 0,
-        "Rarity": 0,
-        "Purchasable": false
-    },
-    "Difficulty": 3,
-    "LanceTags": {
-        "items": [
-            "lance_bracket_low",
-            "lance_type_battle",
-            "lance_type_fire",
-            "lance_type_dynamic",
-            "lance_type_mixed",
-            "lance_type_notallvehicles",
-            "lance_type_vtol",
-            "lance_type_roguetech"
-        ],
-        "tagSetSourceFile": "Tags/LanceTags"
-    },
-    "LanceUnits": [
-        {
-            "unitType": "Mech",
+  "lanceKey": "Damaged_Easy_TanksOnly_50_D3",
+  "lanceDefId": "Manual",
+  "lanceTagSet": {
+    "items": [
+    ]
+  },
+   "spawnEffectTags": {
+    "items": ["spawn_poorly_maintained_50"]
+  },
+  "lanceDifficultyAdjustment": 0,
+  "unitSpawnPointOverrideList": [
+  {
+            "unitType": "Vehicle",
             "unitId": "Tagged",
             "unitSimGameID": null,
             "pilotId": "Tagged",
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_mech",
-                    "unit_advanced",
-                    "{CUR_TEAM.faction}"
+                    "unit_vehicle"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
-                    "unit_legendary",
-                    "unit_bracket_high",
-                    "unit_lance_vanguard",
                     "unit_assault",
                     "unit_heavy"
                 ],
@@ -50,8 +32,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_d3",
-                    "pilot_npc_high"
+                    "pilot_npc_tanker_d3"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -70,14 +51,14 @@
             "unitTagSet": {
                 "items": [
                     "unit_vehicle",
-                    "{CUR_TEAM.faction}",
-                    "unit_lance_assassin"
+                    "unit_lance_support"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
+                    "unit_legendary",
                     "unit_bracket_high",
                     "unit_assault",
                     "unit_heavy"
@@ -86,8 +67,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
+                    "pilot_npc_tanker_d3"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -105,8 +85,8 @@
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vtol",
-                    "{CUR_TEAM.faction}"
+                    "unit_vehicle",
+                    "unit_lance_support"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
@@ -114,6 +94,8 @@
                 "items": [
                     "unit_noncombatant",
                     "unit_legendary",
+                    "unit_bracket_high",
+                    "unit_advanced",
                     "unit_assault",
                     "unit_heavy"
                 ],
@@ -121,8 +103,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
+                    "pilot_npc_tanker_d3"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -140,8 +121,8 @@
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vtol",
-                    "{CUR_TEAM.faction}"
+                    "unit_vehicle",
+                    "unit_predator"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
@@ -149,6 +130,7 @@
                 "items": [
                     "unit_noncombatant",
                     "unit_legendary",
+                    "unit_bracket_high",
                     "unit_assault",
                     "unit_heavy"
                 ],
@@ -156,8 +138,7 @@
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-					"{CUR_TEAM.faction}"
+                    "pilot_npc_tanker_d3"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -167,5 +148,5 @@
             },
             "locked": false
         }
-    ]
+  ]
 }
