--- a/MissionControl/lances/Damaged_Easy_TanksOnly_75_D6.json
+++ b/MissionControl/lances/Damaged_Easy_TanksOnly_75_D6.json
@@ -1,57 +1,39 @@
 {
-    "Description": {
-        "Id": "lancedef_mixed_d3_vtol_battle",
-        "Name": "Dynamic Dif 3",
-        "Details": "",
-        "Icon": "",
-        "Cost": 0,
-        "Rarity": 0,
-        "Purchasable": false
-    },
-    "Difficulty": 3,
-    "LanceTags": {
-        "items": [
-            "lance_bracket_low",
-            "lance_type_battle",
-            "lance_type_fire",
-            "lance_type_dynamic",
-            "lance_type_mixed",
-            "lance_type_notallvehicles",
-            "lance_type_vtol",
-            "lance_type_roguetech"
-        ],
-        "tagSetSourceFile": "Tags/LanceTags"
-    },
-    "LanceUnits": [
-        {
-            "unitType": "Mech",
+  "lanceKey": "Damaged_Easy_TanksOnly_75_D6",
+  "lanceDefId": "Manual",
+  "lanceTagSet": {
+    "items": [
+    ]
+  },
+   "spawnEffectTags": {
+    "items": ["spawn_poorly_maintained_75"]
+  },
+  "lanceDifficultyAdjustment": 0,
+  "unitSpawnPointOverrideList": [
+  {
+            "unitType": "Vehicle",
             "unitId": "Tagged",
             "unitSimGameID": null,
             "pilotId": "Tagged",
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_mech",
-                    "unit_advanced",
-                    "{CUR_TEAM.faction}"
+                    "unit_vehicle",
+                    "unit_bracket_high"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
-                    "unit_legendary",
-                    "unit_bracket_high",
-                    "unit_lance_vanguard",
-                    "unit_assault",
-                    "unit_heavy"
+                    "unit_bracket_low",
+                    "unit_assault"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_d3",
-                    "pilot_npc_high"
+                    "pilot_npc_tanker_d6"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -70,24 +52,22 @@
             "unitTagSet": {
                 "items": [
                     "unit_vehicle",
-                    "{CUR_TEAM.faction}",
-                    "unit_lance_assassin"
+                    "unit_lance_support"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "excludedUnitTagSet": {
                 "items": [
                     "unit_noncombatant",
-                    "unit_bracket_high",
-                    "unit_assault",
-                    "unit_heavy"
+                    "unit_legendary",
+                    "unit_bracket_low",
+                    "unit_assault"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
+                    "pilot_npc_tanker_d6"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -105,8 +85,8 @@
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vtol",
-                    "{CUR_TEAM.faction}"
+                    "unit_vehicle",
+                    "unit_lance_support"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
@@ -114,15 +94,14 @@
                 "items": [
                     "unit_noncombatant",
                     "unit_legendary",
-                    "unit_assault",
-                    "unit_heavy"
+                    "unit_bracket_low",
+                    "unit_assault"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-                    "{CUR_TEAM.faction}"
+                    "pilot_npc_tanker_d6"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -140,8 +119,8 @@
             "pilotSimGameID": null,
             "unitTagSet": {
                 "items": [
-                    "unit_vtol",
-                    "{CUR_TEAM.faction}"
+                    "unit_vehicle",
+                    "unit_predator"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
@@ -149,15 +128,13 @@
                 "items": [
                     "unit_noncombatant",
                     "unit_legendary",
-                    "unit_assault",
-                    "unit_heavy"
+                    "unit_assault"
                 ],
                 "tagSetSourceFile": "Tags/UnitTags"
             },
             "pilotTagSet": {
                 "items": [
-                    "pilot_npc_tanker_d3",
-					"{CUR_TEAM.faction}"
+                    "pilot_npc_tanker_d6"
                 ],
                 "tagSetSourceFile": "Tags/PilotTags"
             },
@@ -167,5 +144,5 @@
             },
             "locked": false
         }
-    ]
+  ]
 }
