mc back to dynamic lances

--- a/MissionControl/settings.json
+++ b/MissionControl/settings.json
@@ -19,7 +19,7 @@
     "UseGeneralProfileForSkirmish": true,
     "DisableIfFlashpointContract": true,
     "DisableWhenMaxTonnage": {
-      "Enable": true,
+      "Enable": false,
       "Limited": false,
       "LimitedToUnder": 300,
     }
