--- a/CustomAmmoCategories/WeaponRealizerSettings.json
+++ b/CustomAmmoCategories/WeaponRealizerSettings.json
@@ -10,13 +10,13 @@
 
 	"overheatModifier": true,
 
-	"heatDamageModifier": false,
+	"heatDamageModifier": true,
 
 	"heatDamageAppliesToVehicleAsNormalDamage": true,
 	"heatDamagePercentApplicationToVehicle": 150,
 
 	"heatDamageAppliesToTurretAsNormalDamage": true,
-	"heatDamagePercentApplicationToTurret": 150,
+	"heatDamagePercentApplicationToTurret": 175,
 
 	"heatDamageAppliesToBuildingAsNormalDamage": true,
 	"heatDamagePercentApplicationToBuilding": 200,
