--- a/InnerSphereMap/Factions/faction_ClanSnowRaven.json
+++ b/InnerSphereMap/Factions/faction_ClanSnowRaven.json
@@ -2,7 +2,7 @@
   "ID": "faction_ClanSnowRaven",
   "Name": "Clan Snow Raven",
   "ShortName": "Snow Raven",
-  "Demonym": "Snow Ravian",
+  "Demonym": "Snow Raven",
   "Government": "Clan",
   "Allies": [
   ],
