blacklisted the quirk grenade launcher

--- a/RogueModuleTech/quirks/weapon/Weapon_IvanGrenadeLauncher.json
+++ b/RogueModuleTech/quirks/weapon/Weapon_IvanGrenadeLauncher.json
@@ -86,7 +86,8 @@
     "ComponentTags": {
         "items": [
             "component_type_stock",
-            "range_extreme"
+            "range_extreme",
+            "BLACKLISTED"
         ],
         "tagSetSourceFile": ""
     }
